--- a/source/index.html
+++ b/source/index.html
@@ -77,25 +77,33 @@
 
                 <div class="options__item swiper-slide">
                   <figure>
-                    <img class="options__item-image" src="img/nomi-options-01.jpg" alt="">
+                    <picture>
+                      <img class="options__item-image" src="img/nomi-options-01.jpg" srcset="img/nomi-options-01@2x.jpg 2x" alt="">
+                    </picture>
                     <figcaption class="options__item-caption">Koop de Nomi Kinderstoel en de uitbreidingen Nomi Baby en Nomi Mini</figcaption>
                   </figure>
                 </div>
                 <div class="options__item swiper-slide">
                   <figure>
-                    <img class="options__item-image" src="img/nomi-options-02.jpg" alt="">
+                    <picture>
+                      <img class="options__item-image" src="img/nomi-options-02.jpg" srcset="img/nomi-options-02@2x.jpg 2x" alt="">
+                    </picture>
                     <figcaption class="options__item-caption">0-6 maanden Voeg de ligstoel Nomi Baby toe</figcaption>
                   </figure>
                 </div>
                 <div class="options__item swiper-slide">
                   <figure>
-                    <img class="options__item-image" src="img/nomi-options-03.jpg" alt="">
+                    <picture>
+                      <img class="options__item-image" src="img/nomi-options-03.jpg" srcset="img/nomi-options-03@2x.jpg 2x" alt="">
+                    </picture>
                     <figcaption class="options__item-caption">6-24 maanden Voeg de beugel Nomi Mini toe</figcaption>
                   </figure>
                 </div>
                 <div class="options__item swiper-slide">
                   <figure>
-                    <img class="options__item-image" src="img/nomi-options-04.jpg" alt="">
+                    <picture>
+                      <img class="options__item-image" src="img/nomi-options-04.jpg" srcset="img/nomi-options-04@2x.jpg 2x" alt="">
+                    </picture>
                   <figcaption class="options__item-caption">24 maanden + Gebruik de Nomi Highchair zonder uitbreidingen</figcaption>
                   </figure>
                 </div>
@@ -112,13 +120,13 @@
     </section>
 
     <section class="details">
-      <h2 class="details__title"><span class="text-bold">Next generation highchair</span> - each detail has a purpose</h2>
+      <h2 class="details__title"><span class="text-bold">Volgende generatie kinderstoel</span> - elk detail heeft een doel</h2>
 
       <div class="details__items-wrapper">
         <picture>
           <source media="(max-width: 767px)" srcset="img/nomi-details-mobile.jpg 1x, img/nomi-details-mobile@2x.jpg 2x">
           <source media="(max-width: 1200px)" srcset="img/nomi-details-tablet.jpg 1x, img/nomi-details-tablet@2x.jpg 2x">
-          <img class="details__image" src="img/nomi-details-desktop.jpg" srcset="img/nomi-details-desktop@2x.jpg 2x" alt="Next generation highchair">
+          <img class="details__image" src="img/nomi-details-desktop.jpg" srcset="img/nomi-details-desktop@2x.jpg 2x" alt="Volgende generatie kinderstoel">
         </picture>
         <ul class="details__list">
           <li class="details__item details__item--left">
@@ -224,17 +232,18 @@
     </section>
 
     <section class="config wrapper">
-      <h2 class="config__title"><span class="text-bold">Next generation highchair</span> - each detail has a purpose</h2>
+      <h2 class="config__title"><span class="text-bold">Ontwerp uw Nomi</span></h2>
+      <button class="config__result-btn"><span>Het resultaat bekijken</span></button>
       <div class="config__tabs">
 
         <input class="config__tab-radio" type="radio" name="tabs" id="tab1" checked="checked" data-section="section1">
-        <label class="config__tab-label"  for="tab1">Colour and stem
+        <label class="config__tab-label"  for="tab1">Kleur en stam
           <svg class="config__tab-arrow" width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M8.69788 8.19307L2.36168 14.2127C1.95862 14.5958 1.30513 14.5958 0.902269 14.2127C0.499374 13.8299 0.499374 13.2091 0.902269 12.8263L6.50882 7.4999L0.902432 2.17367C0.499537 1.79074 0.499537 1.16997 0.902432 0.787198C1.30533 0.404267 1.95879 0.404267 2.36184 0.787198L8.69804 6.80688C8.89949 6.99836 9.0001 7.24905 9.0001 7.49987C9.0001 7.75081 8.89929 8.00168 8.69788 8.19307Z" fill="#909DA8"/>
           </svg>
         </label>
         <section class="config__tab" id="section1">
-          <h3 class="config__tab-title">Colour and stem</h3>
+          <h3 class="config__tab-title">Kleur en stam</h3>
           <div class="config__items-wrapper">
             <div class="config__item" data-category="highchair">
               <div class="config__item-header">
@@ -279,7 +288,7 @@
               </div>
 
               <div class="config__desc">
-                <span class="config__desc-text">Restraint for children aged 6-36 months. Easily snaps on the Highchair</span>
+                <span class="config__desc-text">Nomi Mini Beugel voor kinderen in de leeftijd van 6-36 maanden. Gemakkelijk klikken op de kinderstoel</span>
                 <div class="config__desc-image-wrapper">
                   <picture>
                     <img class="config__desc-image" src="img/nomi-mini.jpg" srcset="img/nomi-mini@2x.jpg 2x" alt="Nomi Mini">
@@ -292,30 +301,6 @@
               </fieldset>
             </div>
 
-
-
-            <div class="config__item" data-category="harness">
-              <div class="config__item-header">
-                <input class="config__checkbox" type="checkbox" id="harness" name="harness" value="harness">
-                <label for="harness">Highchair Harness</label>
-                <span class="config__item-price"></span>
-              </div>
-
-              <div class="config__desc">
-                <span class="config__desc-text">Highchair Harness. Suited for Nomi Highchair and WITH the restraint Nomi Mini. For children from 6-36 months.</span>
-                <div class="config__desc-image-wrapper">
-                  <picture>
-                    <img class="config__desc-image" src="img/nomi-harness.jpg" srcset="img/nomi-harness@2x.jpg 2x" alt="Highchair Harness">
-                  </picture>
-                </div>
-              </div>
-
-              <fieldset>
-                <div class="harness-color config__color-wrapper"></div>
-              </fieldset>
-            </div>
-
-
             <div class="config__item" data-category="tray">
               <div class="config__item-header">
                 <input class="config__checkbox" type="checkbox" id="tray" name="tray" value="tray">
@@ -324,7 +309,7 @@
               </div>
 
               <div class="config__desc">
-                <span class="config__desc-text">Tray by Evomove. Practical tray that is easy to click on Nomi Mini.</span>
+                <span class="config__desc-text">Tray by Evomove. Dienblad van Evomove. Praktisch dienblad dat gemakkelijk te klikken is op Nomi Mini.</span>
                 <div class="config__desc-image-wrapper">
                   <picture>
                     <img class="config__desc-image" src="img/nomi-tray.jpg" srcset="img/nomi-tray@2x.jpg 2x" alt="Tray by Evomove">
@@ -337,7 +322,6 @@
               </fieldset>
             </div>
 
-
             <div class="config__item" data-category="cushion">
               <div class="config__item-header">
                 <input class="config__checkbox" type="checkbox" id="cushion" name="cushion" value="cushion">
@@ -347,14 +331,35 @@
               </div>
 
               <div class="config__desc">
-                <span class="config__desc-text">The cushions are reversible with a different colour on each side.</span>
+                <span class="config__desc-text">De kussens zijn dubbelzijdig bruikbaar en hebben aan beide zijden een verschillende kleur.</span>
               </div>
 
               <fieldset>
-                <p class="config__color-caption">choose cushion</p>
+                <p class="config__color-caption">Kies kussen</p>
                 <div class="cushion-color config__color-wrapper"></div>
-                <p class="config__color-caption">Premuim cushion + 25 €</p>
+                <p class="config__color-caption">Premuim kussen + 10 €</p>
                 <div class="cushion-color-premium config__color-wrapper"></div>
+              </fieldset>
+            </div>
+
+            <div class="config__item" data-category="harness">
+              <div class="config__item-header">
+                <input class="config__checkbox" type="checkbox" id="harness" name="harness" value="harness">
+                <label for="harness">Highchair Harness</label>
+                <span class="config__item-price"></span>
+              </div>
+
+              <div class="config__desc">
+                <span class="config__desc-text">Kinderstoel Harnas. Geschikt voor Nomi Kinderstoel en met de Nomi Mini beugel. Voor kinderen van 6-36 maanden</span>
+                <div class="config__desc-image-wrapper">
+                  <picture>
+                    <img class="config__desc-image" src="img/nomi-harness.jpg" srcset="img/nomi-harness@2x.jpg 2x" alt="Highchair Harness">
+                  </picture>
+                </div>
+              </div>
+
+              <fieldset>
+                <div class="harness-color config__color-wrapper"></div>
               </fieldset>
             </div>
           </div>
@@ -378,7 +383,7 @@
                 </div>
 
                 <div class="config__desc">
-                  <span class="config__desc-text">Nomi Baby including mattress and harness for children up to 6 months old. Easily attaches on the Nomi Highchair.</span>
+                  <span class="config__desc-text">Nomi Baby inclusief matras en harnas voor kinderen tot 6 maanden. Gemakkelijk te bevestigen op de Nomi Kinderstoel.</span>
                   <div class="config__desc-image-wrapper">
                     <picture>
                       <img class="config__desc-image" src="img/nomi-baby.jpg" srcset="img/nomi-baby@2x.jpg 2x" alt="Nomi Baby">
@@ -387,11 +392,11 @@
                 </div>
 
                 <fieldset>
-                  <p class="config__color-caption">choose base</p>
+                  <p class="config__color-caption">Kies basis</p>
                   <div class="babybase-color config__color-wrapper"></div>
-                  <p class="config__color-caption">choose cushion</p>
+                  <p class="config__color-caption">Kies kussen</p>
                   <div class="mattress-color config__color-wrapper"></div>
-                  <p class="config__color-caption">Premuim cushion + 25 €</p>
+                  <p class="config__color-caption">Premuim kussen + 25 €</p>
                   <div class="mattress-color-premium config__color-wrapper"></div>
                 </fieldset>
               </div>
@@ -404,7 +409,7 @@
                 </div>
 
                 <div class="config__desc">
-                  <span class="config__desc-text">Nomi Play toy bar - grey (one style) including charm for Nomi Baby. Can be folded down either forwards or backwards for easy access to your baby.</span>
+                  <span class="config__desc-text">Nomi Play toy bar - grijs (één model) inclusief charme voor Nomi Baby. Kan naar voren of naar achteren worden geklapt voor gemakkelijke toegang tot uw baby.</span>
                   <div class="config__desc-image-wrapper">
                     <picture>
                       <img class="config__desc-image" src="img/nomi-play.jpg" srcset="img/nomi-play@2x.jpg 2x" alt="Nomi Play">
@@ -429,7 +434,7 @@
               </svg>flip</button>
 
             <p class="final-product__price-text">
-              Total price <span class="final-product__price">0</span> €
+              Totale prijs <span class="final-product__price">0</span> €
             </p>
 
             <div class="final-product__image">
@@ -444,42 +449,8 @@
             </div>
             <a class="final-product__buy">In winkelmandje</a>
           </div>
-
-
         </div>
-
-
-
-<!--
-            <ul class="config__tab-list" role="tablist">
-              <li class="config__tab-item" role="presentation">
-                  <a class="config__tab-link" href="#section1" role="tab" id="tab1" aria-selected="true">Colour and stem
-                    <svg class="config__tab-icon" width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M8.69788 8.19307L2.36168 14.2127C1.95862 14.5958 1.30513 14.5958 0.902269 14.2127C0.499374 13.8299 0.499374 13.2091 0.902269 12.8263L6.50882 7.4999L0.902432 2.17367C0.499537 1.79074 0.499537 1.16997 0.902432 0.787198C1.30533 0.404267 1.95879 0.404267 2.36184 0.787198L8.69804 6.80688C8.89949 6.99836 9.0001 7.24905 9.0001 7.49987C9.0001 7.75081 8.89929 8.00168 8.69788 8.19307Z" fill="#909DA8"/>
-                    </svg>
-                  </a>
-              </li>
-              <li class="config__tab-item" role="presentation">
-                  <a class="config__tab-link" href="#section2" role="tab" id="tab2" tabindex="-1">Accessories
-                    <svg class="config__tab-icon" width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M8.69788 8.19307L2.36168 14.2127C1.95862 14.5958 1.30513 14.5958 0.902269 14.2127C0.499374 13.8299 0.499374 13.2091 0.902269 12.8263L6.50882 7.4999L0.902432 2.17367C0.499537 1.79074 0.499537 1.16997 0.902432 0.787198C1.30533 0.404267 1.95879 0.404267 2.36184 0.787198L8.69804 6.80688C8.89949 6.99836 9.0001 7.24905 9.0001 7.49987C9.0001 7.75081 8.89929 8.00168 8.69788 8.19307Z" fill="#909DA8"/>
-                    </svg>
-                  </a>
-              </li>
-              <li class="config__tab-item" role="presentation">
-                  <a class="config__tab-link" href="#section3" role="tab" id="tab3" tabindex="-1">Nomi Baby
-                    <svg class="config__tab-icon" width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M8.69788 8.19307L2.36168 14.2127C1.95862 14.5958 1.30513 14.5958 0.902269 14.2127C0.499374 13.8299 0.499374 13.2091 0.902269 12.8263L6.50882 7.4999L0.902432 2.17367C0.499537 1.79074 0.499537 1.16997 0.902432 0.787198C1.30533 0.404267 1.95879 0.404267 2.36184 0.787198L8.69804 6.80688C8.89949 6.99836 9.0001 7.24905 9.0001 7.49987C9.0001 7.75081 8.89929 8.00168 8.69788 8.19307Z" fill="#909DA8"/>
-                    </svg>
-                  </a>
-              </li>
-            </ul>
-
--->
-
-
       </div>
-      <button class="config__result-btn"><span>View result</span></button>
     </section>
 
 
