сворачивание табов на мобиле

--- a/source/index.html
+++ b/source/index.html
@@ -237,12 +237,12 @@
       <div class="config__tabs">
 
         <input class="config__tab-radio" type="radio" name="tabs" id="tab1" checked="checked" data-section="section1">
-        <label class="config__tab-label"  for="tab1">Kleur en stam
+        <label class="config__tab-label active"  for="tab1">Kleur en stam
           <svg class="config__tab-arrow" width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M8.69788 8.19307L2.36168 14.2127C1.95862 14.5958 1.30513 14.5958 0.902269 14.2127C0.499374 13.8299 0.499374 13.2091 0.902269 12.8263L6.50882 7.4999L0.902432 2.17367C0.499537 1.79074 0.499537 1.16997 0.902432 0.787198C1.30533 0.404267 1.95879 0.404267 2.36184 0.787198L8.69804 6.80688C8.89949 6.99836 9.0001 7.24905 9.0001 7.49987C9.0001 7.75081 8.89929 8.00168 8.69788 8.19307Z" fill="#909DA8"/>
           </svg>
         </label>
-        <section class="config__tab" id="section1">
+        <section class="config__tab active" id="section1">
           <h3 class="config__tab-title">Kleur en stam</h3>
           <div class="config__items-wrapper">
             <div class="config__item" data-category="highchair">
